fixed scrollbar on open prositions module

--- a/client/src/pages/Dashboard/modules/OpenPositionsTable/OpenPositionsTable.scss
+++ b/client/src/pages/Dashboard/modules/OpenPositionsTable/OpenPositionsTable.scss
@@ -28,3 +28,7 @@
 .OpenPositionsTable .virtual-grid {
 	height: 19rem !important;
 }
+
+.OpenPositionsTable .ant-table-content {
+	height: 23.5rem !important;
+}
